--- a/Starbucks_Capstone_notebook.ipynb
+++ b/Starbucks_Capstone_notebook.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Starbucks Capstone Challenge\n",
     "\n",
-    "### Introduction\n",
+    "## Introduction\n",
     "\n",
     "This data set contains simulated data that mimics customer behavior on the Starbucks rewards mobile app. Once every few days, Starbucks sends out an offer to users of the mobile app. An offer can be merely an advertisement for a drink or an actual offer such as a discount or BOGO (buy one get one free). Some users might not receive any offer during certain weeks. \n",
     "\n",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,17 +100,20 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.linear_model import LogisticRegression"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import roc_auc_score"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Introduction\n",
+    "## Introduction\n",
     "\n",
     "The data exploration and feature engineering was implemented in the notebook \"data_exploration_engineering.ipynb\"\n",
     "\n",
@@ -121,119 +124,520 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(49875, 14)\n",
-      "(16626, 14)\n",
-      "(49875, 1)\n",
-      "(16626, 1)\n"
-     ]
-    }
-   ],
-   "source": [
-    "X_train = pd.read_csv('data/x_train.csv')\n",
-    "X_test  = pd.read_csv('data/x_test.csv')\n",
-    "Y_train = pd.read_csv('data/y_train.csv')\n",
-    "Y_test  = pd.read_csv('data/y_test.csv')\n",
-    "\n",
-    "print(X_train.shape)\n",
-    "print(X_test.shape)\n",
-    "print(Y_train.shape)\n",
-    "print(Y_test.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:3: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RandomForestRegressor accuracy: 85.84%.\n"
-     ]
-    }
-   ],
-   "source": [
-    "rf = RandomForestRegressor(n_estimators = 100, random_state = 42)\n",
-    "\n",
-    "rf.fit(X_train, Y_train)\n",
-    "print(f'RandomForestRegressor accuracy: {round(rf.score(X_train, Y_train)*100,2)}%.')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy of Logistic regression classifier on training set: 75.62%.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.7/site-packages/sklearn/utils/validation.py:760: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
-       "75.61704260651629"
+       "Index(['reward', 'difficulty', 'duration', 'std_income', 'std_age', 'bogo',\n",
+       "       'discount', 'informational', 'F', 'M', 'O', 'type_of_membership',\n",
+       "       'completed'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "logistic_regressor = LogisticRegression()\n",
-    "\n",
-    "logistic_regressor.fit(X_train, Y_train)\n",
-    "print(f'Accuracy of Logistic regression classifier on training set: {round(logistic_regressor.score(X_train, Y_train)*100,2)}%.')\n",
-    "\n",
-    "training_accuracy = logistic_regressor.score(X_train, Y_train)*100\n",
-    "training_accuracy"
+    "training_df = pd.read_csv('data/dataset.csv')\n",
+    "training_df.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Let's recall the correlation of features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "completed             1.000000\n",
+       "duration              0.196006\n",
+       "discount              0.150572\n",
+       "difficulty            0.129000\n",
+       "reward                0.125238\n",
+       "type_of_membership    0.120718\n",
+       "std_income            0.088242\n",
+       "bogo                  0.080825\n",
+       "F                     0.062272\n",
+       "std_age               0.036803\n",
+       "O                     0.011196\n",
+       "M                    -0.064629\n",
+       "informational        -0.283437\n",
+       "Name: completed, dtype: float64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "correlation_matrix = training_df.corr()\n",
+    "correlation_matrix['completed'].sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "it can be seen that the features most correlated to a successful offer(completed=1.0) are (in descending order): duration,discount,difficulty,reward and type of membership ( which was derived from total_days_of_membership)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dealing with imbalanced classes\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[09:33:24] WARNING: /Users/runner/miniforge3/conda-bld/xgboost_1607604592557/work/src/learner.cc:1061: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
-      "Accuracy of Logistic regression classifier on training set: 26.4%.\n"
+      "Total offers completed 16173\n",
+      "Percentage offers Completed 24.319935038570847\n",
+      "Total offers NO completed 50328\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_completed = len(training_df.loc[ (training_df['completed']==1.0)]) \n",
+    "percentage_completed = (total_completed / len(training_df) ) * 100\n",
+    "\n",
+    "print('Total offers completed {total}'.format(total=total_completed))\n",
+    "print('Percentage offers Completed {total}'.format(total=percentage_completed))\n",
+    "\n",
+    "print('Total offers NO completed {total}'.format(total=len(training_df.loc[ (training_df['completed']==0.0)]) ))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is clear that our model has a significant degree of imbalance between completed and uncompleted offers, with completed offers representing only approximately 25% of the total.\n",
+    "\n",
+    "Class imbalance affects accuracy negatively, so something must be done so that model performance can still be evaluated using accuracy. This indicates that we should use a strategy to manage imbalanced classes, either by some method of increasing the minority class samples or decreasing the majority class samples or by using a classification model that is little affected by the class imbalance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using an up-sample minority class strategy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By using the Up-sampling strategy we are randomly duplicating observations from the minority class, in this case successful offers (completed=1.0)  in order to reinforce its relevance on the dataset.\n",
+    "\n",
+    "To implement this strategy we will use the **resample** module of scikitlearn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0    50328\n",
+       "0.0    50328\n",
+       "Name: completed, dtype: int64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.utils import resample\n",
+    "\n",
+    "df_majority = training_df[training_df.completed==0.0]\n",
+    "df_minority = training_df[training_df.completed==1.0]\n",
+    "\n",
+    "# Upsample minority class\n",
+    "df_minority_upsampled = resample(df_minority, \n",
+    "                                 replace=True,       # sample with replacement\n",
+    "                                 n_samples=50328,    # to match majority class\n",
+    "                                 random_state=123)   # reproducible results\n",
+    " \n",
+    "# Combine majority class with upsampled minority class\n",
+    "training_df_upsampled = pd.concat([df_majority, df_minority_upsampled])\n",
+    "training_df_upsampled.completed.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100656, 13)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "training_df_upsampled.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create a training and test set\n",
+    "\n",
+    "Before dividing the data set into training and testing, it is important to look for a method of division that can be more effective than a purely random division. In this case I consider that it would be good that the training and test data set has an equal data proportion based on the column **type_of_membership** (which is calculated depending on the age of the client in the platform) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(80524, 13)\n",
+      "(20132, 13)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import StratifiedShuffleSplit\n",
+    "\n",
+    "split = StratifiedShuffleSplit(n_splits=1 , test_size=0.2, random_state= 42 )\n",
+    "\n",
+    "for train_index, test_index in split.split(training_df_upsampled,training_df_upsampled['type_of_membership']):\n",
+    "    strat_train_set = training_df_upsampled.iloc[train_index]\n",
+    "    strat_test_set  = training_df_upsampled.iloc[test_index]\n",
+    "    \n",
+    "print(strat_train_set.shape)\n",
+    "print(strat_test_set.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    0.515250\n",
+       "2    0.277321\n",
+       "0    0.207429\n",
+       "Name: type_of_membership, dtype: float64"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "strat_train_set['type_of_membership'].value_counts()/len(strat_train_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    0.515249\n",
+       "2    0.277320\n",
+       "0    0.207431\n",
+       "Name: type_of_membership, dtype: float64"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "strat_test_set['type_of_membership'].value_counts()/len(strat_test_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(80524, 12)\n",
+      "(80524,)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Index(['reward', 'difficulty', 'duration', 'std_income', 'std_age', 'bogo',\n",
+       "       'discount', 'informational', 'F', 'M', 'O', 'type_of_membership'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train = strat_train_set.drop(columns=['completed'])\n",
+    "y_train = strat_train_set['completed']\n",
+    "print(X_train.shape)\n",
+    "print(y_train.shape)\n",
+    "X_train.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(20132, 12)\n",
+      "(20132,)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Index(['reward', 'difficulty', 'duration', 'std_income', 'std_age', 'bogo',\n",
+       "       'discount', 'informational', 'F', 'M', 'O', 'type_of_membership'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test = strat_test_set.drop(columns=['completed'])\n",
+    "y_test = strat_test_set['completed']\n",
+    "print(X_test.shape)\n",
+    "print(y_test.shape)\n",
+    "X_test.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### RandomForestClassifier\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RandomForestClassifier accuracy: 95.01%.\n",
+      "[0. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "rf = RandomForestClassifier(n_estimators = 100, random_state = 42)\n",
+    "\n",
+    "rf.fit(X_train, y_train)\n",
+    "print(f'RandomForestClassifier accuracy: {round(rf.score(X_train, y_train)*100,2)}%.')\n",
+    "\n",
+    "# Predict on training set\n",
+    "pred_y_4 = rf.predict(X_train)\n",
+    " \n",
+    "# Is our model still predicting just one class?\n",
+    "print( np.unique( pred_y_4 ) )\n",
+    "# [0 1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Using and evaluating AUROC as a metric\n",
+    "\n",
+    "Intuitively, AUROC represents the likelihood of one classification model to distinguishing observations from two classes. In other words, if you randomly select one observation from each class, AUROC tell the probability that the model will be able to \"rank\" them correctly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUROC: 0.990000892243315\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "prob_y_4 = rf.predict_proba(X_train)\n",
+    "prob_y_4 = [p[1] for p in prob_y_4]\n",
+    "print( \"AUROC: \" + str(roc_auc_score(y_train, prob_y_4)) )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## LogisticRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LogisticRegression Accuracy:0.6794247677710993\n",
+      "[0. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "logistic_regressor = LogisticRegression()\n",
+    "\n",
+    "logistic_regressor.fit(X_train, y_train)\n",
+    "\n",
+    "pred_y_0 = logistic_regressor.predict(X_train)\n",
+    "print( \"LogisticRegression Accuracy:\" + str(accuracy_score(pred_y_0, y_train)) )\n",
+    "print( np.unique( pred_y_0 ) )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### AUROC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7450871576933906\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "prob_y_4 = logistic_regressor.predict_proba(X_train)\n",
+    "prob_y_4 = [p[1] for p in prob_y_4]\n",
+    "print( roc_auc_score(y_train, prob_y_4) )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## XGBRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[17:07:03] WARNING: /Users/runner/miniforge3/conda-bld/xgboost_1607604592557/work/src/learner.cc:1061: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "Accuracy of Logistic regression classifier on training set: 33.95%.\n"
      ]
     }
    ],
    "source": [
     "xg_reg = xgb.XGBRegressor(objective ='binary:logistic')\n",
-    "xg_reg.fit(X_train,Y_train)\n",
-    "print(f'Accuracy of Logistic regression classifier on training set: {round(xg_reg.score(X_train, Y_train)*100,2)}%.')"
+    "xg_reg.fit(X_train,y_train)\n",
+    "print(f'Accuracy of Logistic regression classifier on training set: {round(xg_reg.score(X_train, y_train)*100,2)}%.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Evaluating the model on the test set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Accuracy: 0.8438307172660441\n"
+     ]
+    }
+   ],
+   "source": [
+    "final_predictions = rf.predict(X_test)\n",
+    "\n",
+    "print( \"Model Accuracy: \" + str(accuracy_score(final_predictions, y_test)) )"
    ]
   },
   {
